<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mail_filtering"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="0.26">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_text"
                android:textSize="8pt" />
            <EditText
                android:importantForAutofill="no"
                android:inputType="text"
                android:id="@+id/add_mail"
                android:layout_width="match_parent"
                android:layout_height="454dp"
                android:hint="@string/double_click_text" />
        </LinearLayout>
    </ScrollView>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/start"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/start_text" />
            <Button
                android:id="@+id/restart"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/restart_text" />
        </TableRow>
    </TableLayout>

</LinearLayout>